--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -177,16 +177,16 @@ body {
       top: 60%;
       left: -0.1em;
       right: -0.1em;
-      bottom: 0;
+      bottom: 10%;
       transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
-      background-color: alpha($accentColor, 0.3);
+      background-color: alpha($accentColor, 0.2);
     }
 
     a:hover {
       text-decoration: none !important;
 
       &:after {
-        top: 0%;
+        top: 10%;
       }
     }
   }
